--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,8 +13,8 @@ events {
 }
 
 http {
-    # include       mime.types;
-    default_type  application/octet-stream;
+    include       mime.types;
+    default_type  application/json;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
@@ -24,11 +24,29 @@ http {
 
     sendfile        on;
     #tcp_nopush     on;
-
-    #keepalive_timeout  0;
+    
     keepalive_timeout  65;
-
     #gzip  on;
+
+    #
+    ### AUTH SNIPPET
+    #
+    # location = /api/fl/circuits {
+        # auth_jwt_ on;
+        # auth_jwt_key_file /etc/nginx/api_secret.jwk;
+
+        # if ( $jwt_claim_uid = 222) {
+            # add_header X-jwt-claim-uid "$jwt_claim_uid" always;
+            # add_header X-jwt-status "Redirected to Backend-API" always;
+            # proxy_pass http://chess-api;
+        # }
+        # if ( $jwt_claim_uid != 222) {
+            # add_header X-jwt-claim-uid "$jwt_claim_uid" always;
+            # add_header X-jwt-status "Invalid user, no redirect" always;
+            # return 403 "Forbidden: Not Authorized to Access";
+        # }
+    # }
+    ### AUTH SNIPPET END
 
     server {
         listen       80;
@@ -36,15 +54,14 @@ http {
 
         #charset koi8-r;
         #access_log  logs/host.access.log  main;
-
+        
         location / {
             root html;
             index index.html;
         }
-
+        
         location /api/chess/ {
-            # root   html;
-            # index  index.html index.htm;
+            root /usr/src/api/chess;
             proxy_http_version 1.1;
             proxy_cache_bypass $http_upgrade;
             
@@ -55,7 +72,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         
-            proxy_pass http://$remote_addr:3001;
+            proxy_pass http://api_chess:3001/;
         }
 
         #error_page  404              /404.html;
